# tclifford

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: algebra.rs  algebra_ifft.rs  coeff_storage.rs  complexification.rs  fftrepr.rs  index_utils.rs  lib.rs  mv_dense.rs  mv_sparse.rs  ops.rs  pga.rs  precomputed.rs  quaternion.rs  test.rs  types.rs
src/clifft/: mod.rs  tests.rs
src/fftrepr/: matrix.rs  mod.rs  wmul.rs
tests/: unit.rs
