[package]
name = "tclifford"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "*"
itertools = "*"
ndarray = ">=0.16.0"
# Use the dev version of ndarray linalg until they release the ndarray 0.16.x support
ndarray-linalg={git="https://github.com/rust-ndarray/ndarray-linalg.git", features=["openblas-static"]}
static_assertions = "1.1.0"
opimps = "*"

[dev-dependencies]
rand = "*"
num-integer = "*"
