[package]
name = "tclifford"
description = "Geometric algebra library"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gleb Rumyantsev"]
keywords = ["clifford", "clifford-algebra", "geometric-algebra", "grassmann", "algebra"]
categories = ["mathematics", "science", "algorithms", "graphics"]
homepage = "https://github.com/grumyantsev/tclifford"
repository = "https://github.com/grumyantsev/tclifford"
readme = "README.md"

[dependencies]
num = ">=0.4.3, <0.5"
itertools = ">=0.13"
ndarray = ">=0.16, <0.17"
static_assertions = "1.1.0"
opimps = "0.2.2"

[dev-dependencies]
rand = ">=0.8"
num-integer = ">=0.1"
